<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/tv_always"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#8790A6"
            android:textSize="14sp"
            android:text="@string/always_stay_on_window"
            android:padding="4dp"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/tv_times1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#8790A6"
            android:textSize="14sp"
            android:text="@string/view_only_one_time"
            android:padding="4dp"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/tv_times2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#8790A6"
            android:textSize="14sp"
            android:text="@string/view_two_times"
            android:padding="4dp"
            android:gravity="center"
            />

    </LinearLayout>


</android.support.v7.widget.CardView>