<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/lly_toolbar_common"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bg_toolbar_white"
        android:paddingBottom="8dp"
        android:elevation="3dp"
        android:fitsSystemWindows="true"
        >

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:background="#ffff"
            app:navigationIcon="@drawable/ic_navigate_back2"
            app:title="" />


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/selected_album"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:foreground="?selectableItemBackground"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="20sp"
                tools:text="@string/all_photos"
                android:paddingLeft="16dp"
                android:layout_gravity="start"
                />

            <TextView
                android:id="@+id/tv_image_send_type"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:text="@string/always_stay_on_window"
                android:textSize="14sp"
                android:textColor="#8790A6"
                android:drawableRight="@drawable/ic_around_fill_down"
                android:drawablePadding="8dp"
                android:layout_gravity="right"
                />

        </FrameLayout>

    </LinearLayout>


    <FrameLayout
        android:id="@+id/bottom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg_bottom_toolbar_white"
        android:elevation="4dp"
        tools:targetApi="lollipop"
        >

        <TextView
            android:id="@+id/button_preview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:foreground="?selectableItemBackground"
            android:padding="16dp"
            android:text="@string/button_preview"
            android:textColor="?attr/bottomToolbar.preview.textColor"
            android:textSize="16sp"
            android:visibility="gone"
            />

        <LinearLayout
            android:padding="16dp"
            android:id="@+id/originalLayout"
            android:visibility="visible"
            android:orientation="horizontal"
            android:layout_gravity="start"
            android:layout_width="wrap_content"
            android:foreground="?selectableItemBackground"
            android:layout_height="wrap_content"
            tools:showIn="@layout/activity_matisse">


            <com.zhihu.matisse.internal.ui.widget.CheckRadioView
                android:id="@+id/original"
                android:src="@drawable/ic_preview_radio_off"
                android:layout_gravity="center_vertical"
                android:layout_width="16dp"
                android:layout_height="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:enabled="true"
                android:paddingStart="4dp"
                android:paddingLeft="4dp"
                android:text="@string/button_original"
                android:textColor="#8790A6"
                android:textSize="14sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/button_apply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:foreground="?selectableItemBackground"
            android:padding="16dp"
            android:textColor="?attr/bottomToolbar.apply.textColor"
            android:textSize="16sp" />

    </FrameLayout>


    <!-- 发送按钮-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignBottom="@id/bottom_toolbar"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="8dp"
        >

        <ImageView
            android:id="@+id/iv_send"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_send"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:layout_gravity="center"
            android:textColor="#8790A6"
            android:textSize="14sp"
            />

    </LinearLayout>


    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_toolbar"
        android:layout_below="@id/lly_toolbar_common"
        android:visibility="gone" />

    <FrameLayout
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_toolbar"
        android:layout_below="@id/lly_toolbar_common"
        android:visibility="gone">

        <TextView
            android:id="@+id/empty_view_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawablePadding="8dp"
            android:drawableTop="?attr/album.emptyView"
            android:gravity="center"
            android:text="@string/empty_text"
            android:textColor="?attr/album.emptyView.textColor"
            android:textSize="16sp" />

    </FrameLayout>
</RelativeLayout>